changes for deployment

--- a/PrayReminder.API/appsettings.json
+++ b/PrayReminder.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TelegramBotToken": "8189457186:AAEOs1V0QPIGdohCJ0kBuZDwXYuqbx1jarY",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost; Port=5432; UserName=postgres; Database=PrayReminder; Password=root"
+  },
   "AllowedHosts": "*"
 }
