making up-to-date

--- a/PrayReminder.API/appsettings.json
+++ b/PrayReminder.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "TelegramBotToken": "8189457186:AAEOs1V0QPIGdohCJ0kBuZDwXYuqbx1jarY",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Port=5432; UserName=postgres; Database=PrayReminder; Password=root"
+    "DefaultConnection": "Host=localhost; Port=5432; UserName=postgres; Database=PrayReminder2; Password=root"
   },
   "AllowedHosts": "*"
 }
